starting over AGAIN

--- a/index.html
+++ b/index.html
@@ -7,55 +7,17 @@
     <title>Salary Calculator</title>
 </head>
 <body>
-    <p> Add Employee </p>
-    <form class="addemployee-form" onSubmit="submitForm(event)">
-        First Name: <input id="firstname" type="text" />
-        Last Name: <input id="lastname" type="text" />
-        ID: <input id="id" type="number" />
-        Title: <input id="title" type="text" />
-        Annual Salary: <input id="annualsalary" type="number" />
-        <br>
-        <button>Submit</button>
+    <h1>Salary Calculator</h1>
+    <form id="form">
+      <input type="text" id="firstName" placeholder="First Name">
+      <input type="text" id="lastName" placeholder="Last Name">
+      <input type="text" id="idNumber" placeholder="ID Number">
+      <input type="text" id="jobTitle" placeholder="Job Title">
+      <input type="text" id="annualSalary" placeholder="Annual Salary">
+      <button id="submitButton" onclick="submitForm()">Submit</button>
     </form>
-    <p> Employees </p>
-    <table id="employees">
-        <tableheader>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Annual Salary</th>
-            </tr>
-        </tableheader>
-        <tablebody>
-            <tr>
-                <td>Jen</td>
-                <td>Barber</td>
-                <td>4521</td>
-                <td>Team Lead</td>
-                <td>$80,000</td>
-                <td><button onclick="deleteButton()">Delete</button></td>
-            </tr>
-            <tr>
-                <td>Maurice</td>
-                <td>Moss</td>
-                <td>8724</td>
-                <td>Support Team</td>
-                <td>$58,000</td>
-                <td><button onclick="deleteButton()">Delete</button></td>
-            </tr>
-            <tr>
-                <td>Roy</td>
-                <td>Smith</td>
-                <td>9623</td>
-                <td>Quality Assurance</td>
-                <td>$48,000</td>
-                <td><button onclick="deleteButton()">Delete</button></td>
-            </tr>
-        </tablebody>
-      </table> 
-
-    
-</body>
+    <div id="employees"></div>
+    <div id="totalMonthlyCost"></div>
+  </body>
+      <script src="script.js"></script>
 </html>
